force-app/main/default/objects/ContractLineItem__c/ContractLineItem__c.object-meta.xml
<CustomObject>
    <label>契約月次明細</label>
    <nameField>
        <label>契約月次明細名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>