force-app/main/default/objects/ContractLineItem__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>契約月次明細</relationshipLabel>
    <relationshipName>ContractLine</relationshipName>
    <type>Lookup</type>
</CustomField>