force-app/main/default/objects/ContractLineItem__c/fields/ARR_Target__c.field-meta.xml
<CustomField>
    <fullName>ARR_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ARR対象</label>
    <type>Checkbox</type>
</CustomField>