force-app/main/default/objects/ContractLineItem__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>契約月次明細</relationshipLabel>
    <relationshipName>ContractLine1</relationshipName>
    <type>Lookup</type>
</CustomField>