force-app/main/default/objects/ContractLineItem__c/fields/ContractPeriod__c.field-meta.xml
<CustomField>
    <fullName>ContractPeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約期間</label>
    <referenceTo>ContractPeriod__c</referenceTo>
    <relationshipLabel>契約月次明細</relationshipLabel>
    <relationshipName>ContractMonthlyDetails</relationshipName>
    <type>Lookup</type>
</CustomField>