force-app/main/default/objects/ContractLineItem__c/fields/ContractYearMonth__c.field-meta.xml
<CustomField>
    <fullName>ContractYearMonth__c</fullName>
    <label>契約年月</label>
    <length>255</length>
    <type>Text</type>
</CustomField>