force-app/main/default/objects/ContractLineItem__c/fields/InitialFee__c.field-meta.xml
<CustomField>
    <fullName>InitialFee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>初期費用</label>
    <type>Checkbox</type>
</CustomField>