force-app/main/default/objects/ContractLineItem__c/fields/InvoiceStatus__c.field-meta.xml
<CustomField>
    <fullName>InvoiceStatus__c</fullName>
    <label>請求状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未請求</fullName>
                <default>true</default>
                <label>未請求</label>
            </value>
            <value>
                <fullName>請求済</fullName>
            </value>
            <value>
                <fullName>取消済</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>