force-app/main/default/objects/ContractLineItem__c/fields/MasterContract__c.field-meta.xml
<CustomField>
    <fullName>MasterContract__c</fullName>
    <label>契約管理</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>契約月次明細</relationshipLabel>
    <relationshipName>ContractLine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>