force-app/main/default/objects/ContractLineItem__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>対象年月</label>
    <length>255</length>
    <type>Text</type>
</CustomField>