force-app/main/default/objects/ContractLineItem__c/fields/MRR_Target__c.field-meta.xml
<CustomField>
    <fullName>MRR_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MRR対象</label>
    <type>Checkbox</type>
</CustomField>