force-app/main/default/objects/ContractLineItem__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>支払方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>請求書</fullName>
            </value>
            <value>
                <fullName>クレジットカード</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>