force-app/main/default/objects/ContractLineItem__c/fields/PeopleNumber__c.field-meta.xml
<CustomField>
    <fullName>PeopleNumber__c</fullName>
    <label>人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>