force-app/main/default/objects/ContractLineItem__c/fields/PeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>PeriodEndDate__c</fullName>
    <label>対象期間終了日</label>
    <type>Date</type>
</CustomField>