force-app/main/default/objects/ContractLineItem__c/fields/PeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>PeriodStartDate__c</fullName>
    <label>対象期間開始日</label>
    <type>Date</type>
</CustomField>