force-app/main/default/objects/ContractLineItem__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>契約月次明細</relationshipLabel>
    <relationshipName>ContractMonthlyDetails</relationshipName>
    <type>Lookup</type>
</CustomField>