force-app/main/default/objects/ContractLineItem__c/fields/ProductMaster__c.field-meta.xml
<CustomField>
    <fullName>ProductMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商品マスタ</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipLabel>契約月次明細</relationshipLabel>
    <relationshipName>ContractLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>