force-app/main/default/objects/ContractLineItem__c/fields/QuotationLine__c.field-meta.xml
<CustomField>
    <fullName>QuotationLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>元見積明細</label>
    <referenceTo>QuotationLine__c</referenceTo>
    <relationshipLabel>契約月次明細</relationshipLabel>
    <relationshipName>ContractMonthlyDetails</relationshipName>
    <type>Lookup</type>
</CustomField>