force-app/main/default/objects/ContractLineItem__c/fields/RelatedInvoiceCancelStatus__c.field-meta.xml
<CustomField>
    <fullName>RelatedInvoiceCancelStatus__c</fullName>
    <formula>TEXT(RelatedInvoice__r.CancelStatus__c)</formula>
    <label>関連請求 取消ステータス</label>
    <type>Text</type>
</CustomField>