force-app/main/default/objects/ContractLineItem__c/fields/RelatedInvoiceFreeeInvoiceStatus__c.field-meta.xml
<CustomField>
    <fullName>RelatedInvoiceFreeeInvoiceStatus__c</fullName>
    <formula>TEXT(RelatedInvoice__r.Freee_Invoice_Status__c)</formula>
    <label>関連請求 送付ステータス</label>
    <type>Text</type>
</CustomField>