force-app/main/default/objects/ContractLineItem__c/fields/RelatedInvoiceFreeeSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>RelatedInvoiceFreeeSyncStatus__c</fullName>
    <formula>TEXT(RelatedInvoice__r.Freee_Sync_Status__c)</formula>
    <label>関連請求 Freee連携ステータス</label>
    <type>Text</type>
</CustomField>