force-app/main/default/objects/ContractLineItem__c/fields/RelatedInvoicePaymentReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>RelatedInvoicePaymentReceivedDate__c</fullName>
    <formula>RelatedInvoice__r.PaymentReceivedDate__c</formula>
    <label>関連請求 入金日</label>
    <type>Date</type>
</CustomField>