force-app/main/default/objects/ContractLineItem__c/fields/RelatedInvoicePaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>RelatedInvoicePaymentStatus__c</fullName>
    <formula>TEXT(RelatedInvoice__r.PaymentStatus__c)</formula>
    <label>関連請求 決済ステータス</label>
    <type>Text</type>
</CustomField>