force-app/main/default/objects/ContractLineItem__c/fields/RevenueAmount__c.field-meta.xml
<CustomField>
    <fullName>RevenueAmount__c</fullName>
    <label>売上予定額</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>